Made sort bars 2 px shorter.  Fixed positioning when the "SAVED" not is visible.
git-svn-id: https://svn.participatoryculture.org/svn/dtv/trunk@4037 bce20531-a64c-4166-8316-56baf4a01729

Original sha1: 49c6b79a2474c15241d802f02b3ebf95048b392e

--- a/tv/resources/css/main.css
+++ b/tv/resources/css/main.css
@@ -374,8 +374,8 @@ img {
     color: #113;
     background-color: #4dc44b;	
     position: relative;
-    height: 19px;
-    padding-top: 5px;
+    height: 17px;
+    padding-top: 4px;
     padding-left: 122px;
 }
 
@@ -1079,9 +1079,10 @@ a.round-button-left.black {
 
 
 .saved-note {
-    margin-top: 3px;
+    margin-top: 7px;
     font-size: 9px;
     color: #666;
+    text-align: center;
 }
 
 .details-date {
